<resources>
    <string name="app_name">Trip Notes</string>
    <string name="action_settings">Settings</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="people_count_mock" translatable="false">5</string>
    <string name="people_count_displaylabel" translatable="false">PEOPLE</string>
    <string name="toDoList_mock" translatable="false">5/10</string>
    <string name="toDoList_displaylabel" translatable="false">LIST</string>
    <string name="amount_mock" translatable="false">$150</string>
    <string name="amount_displaylabel" translatable="false">AMOUNT SPENT</string>
    <string name="creator_badge" translatable="false">CREATOR</string>
    <string name="creator_name_mock" translatable="false">You</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_trip_enter">Enter Trip Name</string>
    <string name="trip_name">Trip Name</string>
    <string name="hint_trip_estimation_amount">Enter estimate amount</string>
    <string name="hint_trip_from">From</string>
    <string name="hint_trip_to">To</string>
    <string name="hint_person_name">Enter Person Name</string>
    <string name="add_person_hint_share">Share equally</string>
    <string name="add_person_hint_assign_manual">Assign Manually</string>
    <string name="hint_add_amount_person_name">Enter person name</string>
    <string name="hint_add_amount_for">Enter name of the item you spent</string>
    <string name="hint_add_amount_value">Enter how much you spent </string>
    <string name="estimatedAmount">ESTIMATED AMOUNT</string>
    <string name="people_list">PEOPLE</string>
    <string name="created_date">DATE</string>
    <string name="content_created_time">TIME</string>
    <string name="choose_type_of_sharing">Choose Type Of Sharing</string>
    <string name="hint_person_assign_amount">Assign amount</string>
    <string name="content_created_day">DAY</string>
    <string name="createdTimeDetails">CREATED DATE &amp; TIME</string>
    <string name="tripFromTo">ADDRESS</string>
    <string name="addNewSpent">Add New Spent</string>
    <string name="showmore">Show More</string>
    <string name="people_estimatedamount_display_label">MAXIMUM AMOUNT</string>
    <string name="people_maximum_amount_display_label">MAXIMUM AMOUNT</string>
    <string name="people_spent_amount_display_label">SPENT AMOUNT</string>
    <string name="people_balance_amount_display_label">BALANCE AMOUNT</string>
    <string name="editSpent">EDIT SPENT</string>
    <string name="action_refresh">Refresh</string>
    <string name="spent_amount_details">Spent Amount Details</string>
    <string name="amount_for_item">Item</string>
    <string name="amount_spent_value">Spent Amount</string>
    <string name="action_help">Help</string>
    <string name="icon">Icon</string>
    <string name="estimated">ESTIMATE AMOUNT</string>
</resources>
