<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.geek4s.tripnotes.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="always" />
</menu>
