<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_person_name" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/choose_type_of_sharing" />


            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="7dp"
                android:src="@color/contentDividerLine" />

            <RadioGroup
                android:id="@+id/add_person_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/add_person_radio_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_person_hint_share" />


                <RadioButton
                    android:id="@+id/add_person_radio_assign_manual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_person_hint_assign_manual" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_person_assignamount_layout"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_person_assignamount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_person_assign_amount"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_person_info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="info" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/trip_person_add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/trip_person_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
